# KURSACH

./: .gitignore  README.md  pyproject.toml
src/: funcs.py  main.py
tests/: test_funcs.py
