[tool.poetry]
name = "kursach"
version = "0.1.0"
description = "backend project for tracking customer transactions"
authors = ["Tim Zaplavnyy <tima.zaplavnyy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
