[tool.poetry]
name = "kursach"
version = "0.1.0"
description = "backend project for tracking customer transactions"
authors = ["Tim Zaplavnyy <tima.zaplavnyy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
attrs = "^23.1.0"
colorama = "^0.4.6"
coverage = "^7.3.4"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
